Loads More Functionality
System now connects, gets gsr data (raw and calculated both) from
received data, and prints it with a unix clock timestamp. Basically, the
connection test tool is as ready to merge as it's gonna get.

Does still have bugs with starting streaming - it needs to connect, stop
streaming, disconnect, reconnect, and then start streaming again for it
to start writing data.

--- a/ShimmerTestApp/connectionTest/connectionTest/connectionTest.csproj
+++ b/ShimmerTestApp/connectionTest/connectionTest/connectionTest.csproj
@@ -59,7 +59,9 @@
     <Compile Include="ConnectionTest.Designer.cs">
       <DependentUpon>ConnectionTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="Filter.cs" />
     <Compile Include="GradDes3DOrientation.cs" />
+    <Compile Include="Logging.cs" />
     <Compile Include="ObjectCluster.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
