--- a/FormTestApp/FormTestApp.csproj
+++ b/FormTestApp/FormTestApp.csproj
@@ -64,12 +64,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DrawPoint.cs" />
     <Compile Include="QueryDataForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="QueryDataForm.Designer.cs">
       <DependentUpon>QueryDataForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ShapeTemplate.cs" />
+    <Compile Include="TemplateRecognizer.cs" />
     <Compile Include="TestForm.cs">
       <SubType>Form</SubType>
     </Compile>
